<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/size_medium"
    tools:context=".StartDataCollectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/size_medium"
            app:cardElevation="@dimen/size_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/size_large">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/vd_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_medium"
                    android:gravity="center"
                    android:text="@string/data_collection_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_medium"
                    android:gravity="center"
                    android:text="@string/data_collection_disclosure"
                    style="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startDataCollectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_large"
                    android:text="@string/start_data_collection" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
