<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.radarbase.passive.app.InfoActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_name_head"
                android:text="@string/app_name_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintBottom_toTopOf="@id/version_head"
                app:layout_constraintTop_toTopOf="@id/constraintLayout"/>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/app_name_head"
                app:layout_constraintBaseline_toBaselineOf="@id/app_name_head"/>

            <TextView
                android:id="@+id/version_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/version"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintBottom_toTopOf="@id/server_base_url_head"
                app:layout_constraintTop_toBottomOf="@id/app_name_head"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/app_name"
                app:layout_constraintBottom_toBottomOf="@id/version_head"
                app:layout_constraintBaseline_toBaselineOf="@id/version_head"/>

            <TextView
                android:id="@+id/server_base_url_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/server_base_url"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintBottom_toTopOf="@id/privacyStatement"
                app:layout_constraintTop_toBottomOf="@id/version_head"/>

            <TextView
                android:id="@+id/server_base_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/app_name"
                app:layout_constraintBottom_toBottomOf="@id/server_base_url_head"
                app:layout_constraintBaseline_toBaselineOf="@id/server_base_url_head"/>

            <TextView
                android:id="@+id/privacyStatement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openPrivacyPolicy"
                android:text="@string/privacy_policy"
                android:textColor="#57a0d4"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/server_base_url_head"
                app:layout_constraintBottom_toTopOf="@id/licenses_button"/>

            <Button
                android:id="@+id/licenses_button"
                android:text="@string/licences_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="showLicenses"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/privacyStatement"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="Info"
            android:background="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlways">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

